fixed issues relating to responsivenesson mobile view

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,7 +48,7 @@ h4,
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -56,12 +56,13 @@ h4,
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.1);
+  background: var(--primary);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(255, 255, 255, 0.2);
+  background: #7BB2FF;
+  /* Slightly brighter blue for hover */
 }
 
 @keyframes shimmer {
